# unclebudget

./: .dockerignore  Dockerfile  compose.yaml  docker-entrypoint.sh  env.example  nginx.conf  pyproject.toml
deploy/: Dockerfile  compose.yaml  docker-entrypoint.sh  env.example
loaders/: first.py  second.py
project/: settings.py  urls.py
unclebudget/: admin.py  apps.py  cache.py  context_processors.py  exceptions.py  forms.py  loader.py  models.py  stats.py  tests.py  urls.py  views.py
unclebudget/migrations/: 0001_initial.py  0002_alter_envelope_parent.py  0002_envelope_description.py  0003_envelope_pinned.py  0003_item_envelope.py  0004_account_initial_balance_account_start_date.py  0004_userdata_beginning_of_time.py  0005_alter_entry_receipt.py  0005_note.py  0006_alter_entry_receipt.py  0006_entry_expected_item_expected.py  0007_receipt_amount.py  0007_remove_item_expected.py  0008_receipt_balanced_receipt_date.py  0008_userdata_small_change_envelope_and_more.py  0009_userdata_transfer_envelope_and_more.py  0010_template_templateitem.py
unclebudget/static/unclebudget/css/: unclebudget.css
unclebudget/static/unclebudget/js/: unclebudget.js
unclebudget/templates/registration/: login.html
unclebudget/templates/unclebudget/: account_detail.html  account_list.html  all.html  base.html  entry_detail.html  envelope_detail.html  envelope_form.html  envelope_item_subset.html  envelope_list.html  envelope_transfer.html  expect.html  process.html  receipt.html  report-expenses-by-month.html  report-income.html  report.html  summary.html  upload.html
(+7 files in other folders)
